# random

./: .gitignore  INSTALL.md  LICENSE.md  Makefile  README.md  arrow-rpg.cabal  build.hs  commit.hs  player.json  random-rpg.cabal  random.hs  rpg.cabal  run.hs  stack.yaml
GameData/: Flavors.csv  Glyphs.json  Items.csv  Items.json  Monsters.csv  Monsters.json  MonstersGlyph.csv  MonstersTag.csv  README.md  Spells.csv  dungeon_crawl.html  glyphs.csv
app/: Main.hs
docs/: Compass.hs  DiceSet.hs  Dungeon.hs  FoV.hs  README.md  keymap.txt
example/: dwarf.hs  elf.hs  halfling.hs  human.hs
scripts/: random.hs
src/: Character.hs  DiceSet.hs  Display.hs  Dwarf.hs  Elf.hs  Halfling.hs  Hobbit.hs  Human.hs  Main.hs  Save.hs  ToHit.hs  Util.hs
src/Engine/Arrow/: Catch.hs  World.hs
src/Game/: Compass.hs  DiceSet.hs
src/Game/Data/: Dwarf.hs  Elf.hs  Halfling.hs  Human.hs
src/Game/Factory/: Character.hs  EntityKind.hs  Equipment.hs  Player.hs
src/Game/Kind/: Entity.hs  Visual.hs
tool/: .gitignore  example.py  make_asset_db.py  make_glyph.py  read_asset_db.py
tool/DbInfo/: __init__.py  helpers.py
tool/ItemInfo/: Items.csv  __init__.py  helpers.py
tool/MonsterInfo/: Monsters.csv  MonstersTag.csv  __init__.py  helpers.py
tool/TileInfo/: __init__.py  tileinfo_feat.py  tileinfo_floor.py  tileinfo_gui.py  tileinfo_icons.py  tileinfo_main.py  tileinfo_player.py  tileinfo_wall.py
tool/db/item/amulet/: amulet_of_faith.json  amulet_of_guardian_spirit.json  amulet_of_magic_regeneration.json  amulet_of_reflection.json  amulet_of_regeneration.json  amulet_of_the_acrobat.json
tool/db/item/armor/: acid_dragon_scales.json  animal_skin.json  chain_mail.json  crystal_plate_armor.json  fire_dragon_scales.json  gold_dragon_scales.json  ice_dragon_scales.json  leather.json  pearl_dragon_scales.json  plate.json  quicksilver_dragon_scales.json  ring_mail.json  robe.json  scale_mail.json  shadow_dragon_scales.json  steam_dragon_scales.json  storm_dragon_scales.json  swamp_dragon_scales.json  troll_leather_armor.json
tool/db/item/axe/: battleaxe.json  broad_axe.json  executioners_axe.json  hand_axe.json  war_axe.json
tool/db/item/boots/: boots.json
tool/db/item/brand/: rune_of_chaos.json  rune_of_distortion.json  rune_of_draining.json  rune_of_electrocution.json  rune_of_fear.json  rune_of_flaming.json  rune_of_freezing.json  rune_of_heavy.json  rune_of_holy_wrath.json  rune_of_pain.json  rune_of_protection.json  rune_of_silver.json  rune_of_spectral.json  rune_of_speed.json  rune_of_vampirisim.json  rune_of_venom.json
tool/db/item/cloak/: cloak.json  dragonskin_cloak.json  elven_cloak.json  fur_lined_cloak.json
tool/db/item/food/: bacon.json  banana.json  cheese_wedge.json  grapes.json  grilled_meat.json  grilled_pork_belly.json  gruel.json  half_eaten_apple.json  healing_herbs.json  lemon.json  orange.json  pear.json  pineapple.json  pizza.json  pork_shoulder.json  ripe_bananna.json  strawberry.json  supply_pack.json
tool/db/item/gloves/: gloves.json
tool/db/item/hafted/: club.json  demon_whip.json  dire_flail.json  eveningstar.json  flail.json  giant_club.json  giant_spiked_club.json  great_mace.json  mace.json  morningstar.json  sacred_scourge.json  whip.json
tool/db/item/helm/: helm.json  leather_skullcap.json  wide_brimmed_hat.json
tool/db/item/longblade/: demon_blade.json  double_sword.json  falchion.json  great_sword.json  long_sword.json  scimitar.json  triple_sword.json
tool/db/item/polearm/: bardache.json  demon_trident.json  glaive.json  halberd.json  scythe.json  spear.json  trident.json
tool/db/item/potion/: potion_of_ambrosia.json  potion_of_attraction.json  potion_of_berserk_rage.json  potion_of_brilliance.json  potion_of_cancellation.json  potion_of_curing.json  potion_of_degeneration.json  potion_of_enlightenment.json  potion_of_experience.json  potion_of_haste.json  potion_of_heal_wounds.json  potion_of_invisibility.json  potion_of_lignification.json  potion_of_magic.json  potion_of_might.json  potion_of_mutation.json  potion_of_resistance.json
tool/db/item/ring/: ring_of_dexterity.json  ring_of_evasion.json  ring_of_fire.json  ring_of_flight.json  ring_of_ice.json  ring_of_intelligence.json  ring_of_magical_power.json  ring_of_poison_resistance.json  ring_of_positive_energy.json  ring_of_protection.json  ring_of_protection_from_cold.json  ring_of_protection_from_fire.json  ring_of_resist_corrosion.json  ring_of_slaying.json  ring_of_strength.json  ring_of_willpower.json  ring_of_wizardry.json
tool/db/item/rune/: rune_of_archmagi.json  rune_of_cold_resistance.json  rune_of_dexterity.json  rune_of_fire_resistance.json  rune_of_flight.json  rune_of_hurling.json  rune_of_intelligence.json  rune_of_poison_resistance.json  rune_of_ponderousness.json  rune_of_positive_energy.json  rune_of_preservation.json  rune_of_protection.json  rune_of_rampaging.json  rune_of_reflection.json  rune_of_resistance.json  rune_of_stealth.json  rune_of_strength.json  rune_of_willpower.json
tool/db/item/scroll/: scroll_of_acquirement.json  scroll_of_amnesia.json  scroll_of_blinking.json  scroll_of_brand_weapon.json  scroll_of_butterflies.json  scroll_of_enchant_armor.json  scroll_of_enchant_weapon.json  scroll_of_fear.json  scroll_of_fog.json  scroll_of_identify.json  scroll_of_immolation.json  scroll_of_noise.json  scroll_of_poison.json  scroll_of_revelation.json  scroll_of_silence.json  scroll_of_summoning.json  scroll_of_teleportation.json  scroll_of_torment.json  scroll_of_vulnerability.json
tool/db/item/shield/: buckler.json  shield.json  tower.json
tool/db/item/shoot/: arbalest.json  hand_cannon.json  longbow.json  shortbow.json  sling.json  triple_crossbow.json
tool/db/item/shortblade/: dagger.json  quick_blade.json  rapier.json  short_sword.json
tool/db/item/staff/: lajatang.json  quarterstaff.json  staff.json
tool/rltiles/: .cflags  feat.d  gui.d  icons.d  main.d  player.d  tiledef-dngn.d  tiledef-feat.d  tiledef-floor.d  tiledef-gui.d  tiledef-icons.d  tiledef-main.d  tiledef-player.d  tiledef-unrand.d  tiledef-wall.d  wall.d
(+479 files in other folders)
