name:                rpg
version:             0.0.1.1
synopsis:            rpg
license:             MIT
license-file:        LICENSE.md
author:              Joel E Carlson
maintainer:          "Joel E Carlson" <joel.elmer.carlson@gmail.com>
category:            Web
build-type:          Simple
cabal-version:       >=1.10

library
  hs-source-dirs: src
  exposed-modules: DiceSet
  other-modules: 
  build-depends:  base
                  , MonadRandom
  default-language: Haskell2010
    
  hs-source-dirs: src
  exposed-modules: Character
  other-modules: 
  build-depends:  base

  hs-source-dirs: src
  exposed-modules: Display
  other-modules: 
  build-depends:  base
                  , text

  hs-source-dirs: src
  exposed-modules: Dwarf
  other-modules: 
  build-depends:  base

  hs-source-dirs: src
  exposed-modules: Elf
  other-modules: 
  build-depends:  base

  hs-source-dirs: src
  exposed-modules: Hobbit
  other-modules: 
  build-depends:  base

  hs-source-dirs: src
  exposed-modules: Human
  other-modules: 
  build-depends:  base

  hs-source-dirs: src
  exposed-modules: ToHit
  other-modules: 
  build-depends:  base

  hs-source-dirs: src
  exposed-modules: Util
  other-modules: 
  build-depends:  base

executable Main
  hs-source-dirs: src
  main-is:        Main.hs
  ghc-options: -threaded -rtsopts -with-rtsopts=-N
  other-modules:  DiceSet
                , Display
                , Character
                , Dwarf
                , Elf
                , Hobbit
                , Human
                , ToHit
                , Util
  build-depends:  base
                  , MonadRandom
                  , text
  default-language: Haskell2010

source-repository head
  type: git
  location: https://github.com/joelelmercarlson/random
